src/corepack/snapshots/errors___corepack_create_bin_directory_error.snap
---
source: buildpacks/nodejs-corepack/src/errors.rs
---
- Debug Info:
  - Disk full

! Unable to create Corepack shim bin directory
!
! An unexpected error occurred while creating the directory at `/layers/corepack/shims/bin`.
!  
! This directory contains the binaries used as shims for Corepack functionality.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
